[gd_scene load_steps=9 format=3 uid="uid://b34noirnydp2t"]

[ext_resource type="Shader" path="res://UI/MainMenu.gdshader" id="1_5d668"]
[ext_resource type="Script" path="res://main_menu.gd" id="1_xqyqg"]
[ext_resource type="Texture2D" uid="uid://cho7bcsv2aif5" path="res://UI/Theme/BackgroundButtonsFinal.png" id="2_aw0qy"]
[ext_resource type="Theme" uid="uid://cioetp3wqiol1" path="res://UI/Theme/theme.tres" id="2_f5q66"]
[ext_resource type="FontFile" uid="uid://c2i478v7kckmf" path="res://UI/Theme/DungeonFont.ttf" id="3_ks551"]
[ext_resource type="Texture2D" uid="uid://cjm885jf3mu23" path="res://UI/Theme/BackgroundButtons1.png" id="5_kt3n4"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_usfc8"]
shader = ExtResource("1_5d668")
shader_parameter/tint_color = Vector4(0, 0, 0, 0.375)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_mn8l4"]
texture = ExtResource("5_kt3n4")

[node name="MainMenu" type="CanvasLayer"]
script = ExtResource("1_xqyqg")

[node name="TextureRect" type="TextureRect" parent="."]
light_mask = 2
visibility_layer = 2
material = SubResource("ShaderMaterial_usfc8")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
rotation = -0.000601457
texture = ExtResource("2_aw0qy")
expand_mode = 5

[node name="Label" type="Label" parent="."]
clip_contents = true
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 72.0
offset_top = 39.0
offset_right = -832.0
offset_bottom = -681.0
scale = Vector2(0.5, 0.5)
theme_override_colors/font_color = Color(0.980346, 0.915719, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0.191761, 0, 1)
theme_override_colors/font_outline_color = Color(0.14215, 0.22414, 0, 1)
theme_override_constants/line_spacing = 0
theme_override_constants/shadow_offset_x = 7
theme_override_constants/shadow_offset_y = 1
theme_override_constants/outline_size = 6
theme_override_constants/shadow_outline_size = 5
theme_override_fonts/font = ExtResource("3_ks551")
theme_override_font_sizes/font_size = 157
text = "The last Explorer"
horizontal_alignment = 1

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 262.0
offset_top = 323.0
offset_right = 262.0
offset_bottom = 323.0

[node name="MarginContainer" type="MarginContainer" parent="Control"]
z_index = 3
clip_contents = true
layout_mode = 1
anchors_preset = -1
offset_left = -151.0
offset_top = -180.0
offset_right = -20.0
offset_bottom = -8.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.737827, 0.761262)
theme = ExtResource("2_f5q66")
theme_override_constants/margin_left = 0
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = 0
theme_override_constants/margin_bottom = 0

[node name="PanelContainer" type="PanelContainer" parent="Control/MarginContainer"]
clip_contents = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="MarginContainer" type="MarginContainer" parent="Control/MarginContainer/PanelContainer"]
clip_contents = true
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Control/MarginContainer/PanelContainer/MarginContainer"]
z_index = 5
use_parent_material = true
clip_contents = true
layout_mode = 2
theme_override_constants/separation = 0

[node name="StartButton" type="Button" parent="Control/MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
clip_contents = true
layout_mode = 2
size_flags_vertical = 4
theme_override_styles/hover = SubResource("StyleBoxTexture_mn8l4")
text = "Start"

[node name="OptionsButton" type="Button" parent="Control/MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
text = "Options
"

[node name="CreditsButton" type="Button" parent="Control/MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
text = "Credits
"

[node name="ExitButton" type="Button" parent="Control/MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
z_index = 3
layout_mode = 2
size_flags_vertical = 4
text = "Exit"

[connection signal="pressed" from="Control/MarginContainer/PanelContainer/MarginContainer/VBoxContainer/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="Control/MarginContainer/PanelContainer/MarginContainer/VBoxContainer/OptionsButton" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="Control/MarginContainer/PanelContainer/MarginContainer/VBoxContainer/CreditsButton" to="." method="_on_credits_button_pressed"]
[connection signal="pressed" from="Control/MarginContainer/PanelContainer/MarginContainer/VBoxContainer/ExitButton" to="." method="_on_exit_button_pressed"]
